fix ui bugs - response buttons in alert for resetting plotted schedules not showing - sorting responsive tables does not sort

--- a/public/styles/chair-root.css
+++ b/public/styles/chair-root.css
@@ -61,3 +61,7 @@ td:has(.td-input) {
 #faculty-table>tbody>tr>td:nth-child(7) {
     white-space: nowrap;
 }
+
+#accept-alert, #reject-alert {
+    display: none;
+}
